line-height: normal fixes overflow: auto scroll bug in ie

--- a/scss/widgets/_data_table.scss
+++ b/scss/widgets/_data_table.scss
@@ -21,12 +21,16 @@
     }
 
     .tbody {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
         padding-top: $header-line-height + 1px;
         white-space: nowrap;
         z-index: $data-table-body-z-index;
 
         height: 100%;
         overflow: auto;
+        line-height: normal;
     }
 
     .column {
